# parallel_DCE_qsl

./: CMakeLists.txt  README.md  fftw_example.cpp  hermite.py  hermite_func_interpolate.py  load_check_norm.py  plot_H1R_analytic.py  plot_warmup.py  readCSV_createDir.py  run_evolution.cpp  step_by_step_symb.py  verify_H1R.py
evolution/: evolution.cpp  evolution.hpp
inParams/: inParams0.csv
